website/versioned_docs/version-0.0.1/api/README.md
---
title: stix
id: version-0.0.1-README
original_id: README
---

#  stix
Stix
====

A module-based, TypeScript-first Node.js® framework.

Note
----

This module is being developed as you're reading this. What's missing?

*   Wetland ORM module.
*   Guards module publish.
*   CLI tools.
*   Documentation.
*   Test coverage.

License
-------

MIT.

## Index

### External modules

* ["Library/Application/Application"](modules/application)
* ["Library/Application/index"](modules/index)
* ["Library/Config/Config"](modules/config)
* ["Library/Config/ConfigInterface"](modules/configinterface)
* ["Library/Config/ControllerManagerConfigInterface"](modules/controllermanagerconfiginterface)
* ["Library/Config/LoggerConfigInterface"](modules/loggerconfiginterface)
* ["Library/Config/ModuleManagerConfigInterface"](modules/modulemanagerconfiginterface)
* ["Library/Config/ResponseConfigInterface"](modules/responseconfiginterface)
* ["Library/Config/RouterConfigInterface"](modules/routerconfiginterface)
* ["Library/Config/RoutesConfigInterface"](modules/routesconfiginterface)
* ["Library/Config/ServerConfigInterface"](modules/serverconfiginterface)
* ["Library/Config/index"](modules/index)
* ["Library/Controller/ControllerInterface"](modules/controllerinterface)
* ["Library/Controller/ControllerManager"](modules/controllermanager)
* ["Library/Controller/ControllerTypes"](modules/controllertypes)
* ["Library/Controller/Loader"](modules/loader)
* ["Library/Controller/index"](modules/index)
* ["Library/Error/InvalidActionResultError"](modules/invalidactionresulterror)
* ["Library/Error/index"](modules/index)
* ["Library/Interface/ContextInterface"](modules/contextinterface)
* ["Library/Interface/index"](modules/index)
* ["Library/ModuleManager/ModuleClassInterface"](modules/moduleclassinterface)
* ["Library/ModuleManager/ModuleInterface"](modules/moduleinterface)
* ["Library/ModuleManager/ModuleManager"](modules/modulemanager)
* ["Library/ModuleManager/index"](modules/index)
* ["Library/Response/ClientErrorResponse"](modules/clienterrorresponse)
* ["Library/Response/InformationalResponse"](modules/informationalresponse)
* ["Library/Response/RedirectionResponse"](modules/redirectionresponse)
* ["Library/Response/Response"](modules/response)
* ["Library/Response/ResponseManager"](modules/responsemanager)
* ["Library/Response/ResponseTypes"](modules/responsetypes)
* ["Library/Response/ServerErrorResponse"](modules/servererrorresponse)
* ["Library/Response/SuccessfulResponse"](modules/successfulresponse)
* ["Library/Response/index"](modules/index)
* ["Library/Router/RegisteredRouteInterface"](modules/registeredrouteinterface)
* ["Library/Router/Route"](modules/route)
* ["Library/Router/RouteInterface"](modules/routeinterface)
* ["Library/Router/Router"](modules/router)
* ["Library/Router/index"](modules/index)
* ["Library/Server/HttpStatusCodes"](modules/httpstatuscodes)
* ["Library/Server/RequestMethods"](modules/requestmethods)
* ["Library/Server/Server"](modules/server)
* ["Library/Server/index"](modules/index)
* ["Library/index"](modules/index)
* ["config/index"](modules/index)
* ["config/logger"](modules/logger)
* ["config/response"](modules/response)
* ["config/routes"](modules/routes)
* ["config/server"](modules/server)
* ["debug"](modules/_debug_.md)
* ["index"](modules/_index_.md)
* ["middleware/dispatch"](modules/dispatch)
* ["middleware/request"](modules/request)
* ["middleware/router"](modules/router)

---

